--- a/package.json
+++ b/package.json
@@ -13,10 +13,14 @@
     "@testing-library/jest-dom": "^5.16.2",
     "@testing-library/react": "^12.1.2",
     "@testing-library/user-event": "^13.5.0",
+    "auto-bind": "^5.0.1",
     "axios": "^0.25.0",
+    "bootstrap": "^5.1.3",
     "firebase": "^9.6.6",
     "google-map-react": "^2.1.10",
     "react": "^17.0.2",
+    "react-bootstrap": "^2.1.2",
+    "react-credit-cards": "^0.8.3",
     "react-dom": "^17.0.2",
     "react-firebase-hooks": "^5.0.2",
     "react-material-ui-carousel": "^3.1.1",
